// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package proto;

import "types.proto";
import "github.com/gravitational/teleport/api/types/types.proto";

// RegisterUsingIAMMethodResponse is a stream response and will contain either a
// Challenge or signed Certs to join the cluster.
message RegisterUsingIAMMethodResponse {
    // Challenge is a crypto-random string that should be included in the signed
    // sts:GetCallerIdentity request.
    string Challenge = 1;
    // Certs is the returned signed certs.
    Certs Certs = 2;
}

service JoinService {
    // RegisterUsingIAMMethod is used to register a new node to the cluster using
    // the IAM join method.
    rpc RegisterUsingIAMMethod(stream types.RegisterUsingTokenRequest)
        returns (stream RegisterUsingIAMMethodResponse);
}
